quote commit added

--- a/index.html
+++ b/index.html
@@ -11,25 +11,133 @@
 </head>
 <body>
     <header>
-<nav class="width_primary">
+<nav class="width_primary ">
     <h2>Bangladesh 2.0</h2>
     <button class="btn_secendary">Sign In</button>
 </nav>
 
 <!-- banner section start -->
-<section class="banner">
+<section class="banner width_primary">
     <div class="banner_content">
-
+        <p>Bangladesh 2.0</p>
+        <h1 class="hadding_primary">Idea , innovation , <br>
+            vision and challenges in <br> New Bangladesh.</h1>
+            <button class="btn_primary">Explore New Bangladesh</button>
     </div>
     <div class="banner_img">
-
+        <img src="./assets/hero.png" alt="">
     </div>
 
 </section>
-    </header>
+</header>
 
     <main>
+        <!-- Pillars of "Bangladesh 2.0" -->
+<section class="width_primary">
+<h2 class="hadding_secendary">Pillars of "Bangladesh 2.0"</h2>
 
+<div class="pillars_container">
+
+    <div class="pillars_content">
+        <img src="./assets/card-icon.png" alt="">
+        <h5>Innovation</h5>
+        <p class="pragraph_primary">Dolor sit amet consectetur elit. <br> Facilis quas, ducimus labore sequi <br> quos  </p>
+    </div>
+
+    <div class="pillars_content">
+        <img src="./assets/card-icon.png" alt="">
+        <h5>Sustainability</h5>
+        <p class="pragraph_primary">Dolor sit amet consectetur elit. <br> Facilis quas, ducimus labore sequi <br> quos  </p>
+    </div>
+    <div class="pillars_content">
+        <img src="./assets/card-icon.png" alt="">
+        <h5>Infrastructure</h5>
+        <p class="pragraph_primary">Dolor sit amet consectetur elit. <br> Facilis quas, ducimus labore sequi <br> quos  </p>
+    </div>
+    <div class="pillars_content">
+        <img src="./assets/card-icon.png" alt="">
+        <h5>Empowerment</h5>
+        <p class="pragraph_primary">Dolor sit amet consectetur elit. <br> Facilis quas, ducimus labore sequi <br> quos  </p>
+    </div>
+    <div class="pillars_content">
+        <img src="./assets/card-icon.png" alt="">
+        <h5>Infrastructure</h5>
+        <p class="pragraph_primary">Dolor sit amet consectetur elit. <br> Facilis quas, ducimus labore sequi <br> quos  </p>
+    </div>
+</div>
+</section>
+
+<!-- The Vision of Future -->
+<section class="width_primary">
+    <h2 class="hadding_secendary">The Vision of Future</h2>
+    <p class="pragraph_primary">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in <br> renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+    <div class="future_container">
+
+        <div class="future_content" style="background-color: #5490F533;">
+            <img src="./assets/card-icon.png" alt="">
+            <h5>Digital Transformation</h5>
+            <p class="pragraph_primary">Creating a nationwide digital ecosystem to <br> enhance connectivity and access to services for <br> all citizens. </p>
+            <button class="btn_primary" style="background-color: #5490F5;">Learn More</button>
+        </div>
+    
+        <div class="future_content">
+            <img src="./assets/card-icon.png" alt="">
+            <h5>Green Energy</h5>
+            <p class="pragraph_primary">Investments in solar and wind energy to ensure <br> a sustainable and eco-friendly future.  </p>
+            <button class="btn_primary" ">Learn More</button>
+        </div>
+        <div class="future_content" style="background-color: #F7EBCF;">
+            <img src="./assets/card-icon.png" alt="">
+            <h5>Modern Infrastructure</h5>
+            <p class="pragraph_primary">Building state-of-the-art infrastructure to support <br> economic growth and global competitiveness.  </p>
+            <button class="btn_primary" style="background-color: #FFC239;">Learn More</button>
+        </div>
+</section>
+
+<!-- Dr. Muhammad Yunus -->
+ <section class="width_primary yunus_section" >
+<p class="pragraph_primary">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p> <br>
+<h4>Dr. Muhammad Yunus</h4>
+<p class="pragraph_primary">Chief Adviser of the People's Republic of Bangladesh</p>
+ </section>
+
+
+ <!-- Your Opinion Matters -->
+  <section class="width_primary">
+    <h2 class="hadding_secendary">Your Opinion Matters</h2>
+
+    <div class="opinion_container">
+        <div class="opinion_content">
+            <thead>
+                <tr>
+                    <th>Questions</th>
+                    <th>Select Your Opinion</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                    <td>
+                        <button class="btn_secendary">Yes, I Agree</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                    <td>
+                        <button class="btn_secendary">Yes, I Agree</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                    <td>
+                        <button class="btn_secendary">Yes, I Agree</button>
+                    </td>
+                </tr>
+            </tbody>
+        </div>
+    </div>
+  </section>
     </main>
 
 
