news letter subscribe button modify

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 
 <!-- Dr. Muhammad Yunus -->
  <section class="width_primary yunus_section" >
-<p class="pragraph_primary">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p> <br>
+<div class="qutes">
+    <p class="pragraph_primary">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p> <br>
 <h4>Dr. Muhammad Yunus</h4>
 <p class="pragraph_primary">Chief Adviser of the People's Republic of Bangladesh</p>
+</div>
  </section>
 
 
@@ -234,9 +236,9 @@
      <section class="width_primary newsletter">
         <div class="news_letter_container">
             <h2 class="hadding_secendary">Subscribe Newsletter</h2>
-            <p class="pragraph_primary">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <p class="pragraph_primary" style="margin-bottom: 10px;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
             <input type="email" placeholder="Enter your email here">
-            <button class="btn_primary">Subscribe</button>
+            <button class="subscribe_btn">Subscribe</button>
             <p class="pragraph_primary">We promise not to spam you!</p>
         </div>
      </section>
@@ -244,7 +246,15 @@
 
 
     <footer>
-
+<div class="foter_logo">
+    <h2 class="hadding_secendary">Bangladesh 2.0</h2>
+</div> 
+<!-- <hr> -->
+<div class="footer_icon">
+    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+</div>
     </footer>
 </body>
 </html>
