footer section added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="pillars_content">
         <img src="./assets/card-icon.png" alt="">
         <h5>Innovation</h5>
-        <p class="pragraph_primary">Dolor sit amet consectetur elit. <br> Facilis quas, ducimus labore sequi <br> quos  </p>
+        <p class="pragraph_primary">the process of bringing about new <br> ideas, methods, products, services, or <br> solutions that have a significant. </p>
     </div>
 
     <div class="pillars_content">
@@ -98,7 +98,7 @@
 <!-- Dr. Muhammad Yunus -->
  <section class="width_primary yunus_section" >
 <div class="qutes">
-    <p class="pragraph_primary">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p> <br>
+    <p class="pragraph_primary">"Muhammad Yunus (born 28 June 1940) is a Bangladeshi economist, entrepreneur, politician, and civil society leader, who has been serving as Chief Adviser of the Interim Government of Bangladesh since 8 August 2024. The third of nine children, Muhammad Yunus was born on 28 June 1940 to a Bengali family of Muslim Saudagars in the village of Bathua, by the Kaptai road at Hathazari in the Chittagong District of Bengal Presidency (now in Bangladesh)."</p> <br>
 <h4>Dr. Muhammad Yunus</h4>
 <p class="pragraph_primary">Chief Adviser of the People's Republic of Bangladesh</p>
 </div>
@@ -168,7 +168,7 @@
             <h3>Bangladesh Launches New Satellite</h3>
             <img src="./assets/al-jazeera.png" alt=""> <br>
 
-            <span class="pragraph_primary">Date: 05/01/2025</span> <span class="pragraph_primary">Time: 10.25 PM</span>
+            <span class="pragraph_primary">Date: 05/01/2025 </span> <span class="pragraph_primary">   Time: 10.25 PM</span>
             <p class="pragraph_primary">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                 with a certain degree of justification, be able to speak of humankind as civilized</p>
                 <button class="btn_primary">Read More</button>
@@ -189,7 +189,7 @@
             <h3>Bangladesh Launches New Satellite</h3>
             <img src="./assets/al-jazeera.png" alt=""> <br>
 
-            <span class="pragraph_primary">Date: 05/01/2025</span> <span class="pragraph_primary">Time: 10.25 PM</span>
+            <span class="pragraph_primary">Date: 05/01/2025</span> <span class="pragraph_primary"> Time: 10.25 PM</span>
             <p class="pragraph_primary">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                 with a certain degree of justification, be able to speak of humankind as civilized</p>
                 <button class="btn_primary">Read More</button>
@@ -251,7 +251,7 @@
 </div> 
 <!-- <hr> -->
 <div class="footer_icon">
-    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.facebook.com/programmingHero" target="blank"><i class="fa-brands fa-facebook" ></i></a>
     <a href=""><i class="fa-brands fa-instagram"></i></a>
     <a href=""><i class="fa-brands fa-x-twitter"></i></a>
 </div>
