--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 <!-- <hr> -->
 <div class="footer_icon">
     <a href="https://www.facebook.com/programmingHero" target="blank"><i class="fa-brands fa-facebook" ></i></a>
-    <a href=""><i class="fa-brands fa-instagram"></i></a>
-    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="https://www.instagram.com/accounts/login/?hl=en" target="blank"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://x.com/i/flow/login?mx=2" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
 </div>
     </footer>
 </body>
