mobile responsive added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>News paper Bangladesh</title>
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <!-- main css -->
     <link rel="stylesheet" href="style.css">
     <!-- font awsome cdn -->
@@ -111,6 +112,7 @@
 
     <div class="opinion_container">
         <div class="opinion_content">
+            <table>
             <thead>
                 <tr>
                     <th>Questions</th>
@@ -121,21 +123,22 @@
                 <tr>
                     <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
                     <td>
-                        <button class="btn_secendary">Yes, I Agree</button>
+                        <button class="btn_secendary">Yes, I Agree <i class="fa-solid fa-circle-chevron-down"></i></button>
                     </td>
                 </tr>
                 <tr>
                     <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
                     <td>
-                        <button class="btn_secendary">Yes, I Agree</button>
+                        <button class="btn_secendary">Yes, I Agree <i class="fa-solid fa-circle-chevron-down"></i></button>
                     </td>
                 </tr>
                 <tr>
                     <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
                     <td>
-                        <button class="btn_secendary">Yes, I Agree</button>
+                        <button class="btn_secendary">Yes, I Agree <i class="fa-solid fa-circle-chevron-down"></i></button>
                     </td>
-                </tr>
+                </tr> 
+            </table>
             </tbody>
         </div>
     </div>
